--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
             <!--Секция 1 (Hero)-->
 
-                 <!-- <section class="hero">
+                 <section class="hero section">
 
                     <div class="container">
 
@@ -65,7 +65,7 @@
                         <button data-modal-open type="button" class="hero__button">Заказать услугу</button>
                     </div>
                     
-                 </section> -->
+                 </section>
 
             <!--Секция 2: Преимущества компании----->
 
