--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Шапка сайта-->
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="container page__container">
             <nav class="header__main-nav">
                     <a href="./index.html" class="header__logo"> <span class="header__logo-item">Web</span>Studio</a>
@@ -53,7 +53,7 @@
             </div>
             
         </div>
-    </header>
+    </header> -->
 
         <!--Hero-->
         <main>
@@ -69,7 +69,7 @@
                         <li class="portfolio__button-item"> <button type="button" class="portfolio__button-link">Маркетинг</button></li>
                     </ul>
 
-                    <ul class="product-list">
+                    <!-- <ul class="product-list">
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
@@ -233,7 +233,7 @@
                             </li>
                     </ul>
 
-                 </div>
+                 </div> -->
 
             </section>
         </main>
