--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
                 
             </footer>
 
-            <!-- <div data-modal class="backdrop is-hidden">
-                <div class="modal">
+            <div data-modal class="backdrop is-hidden">
+                <div class="modal container">
                         <form class="form">
                             
                                 <p class="form__title">Оставьте свои данные, мы вам перезвоним</p>
@@ -551,7 +551,7 @@
                     </button>
 
                 </div>
-            </div> -->
+            </div>
 
             <script src="./js/modal.js"></script>
             <script src="./js/menu.js"></script>
