--- a/index.html
+++ b/index.html
@@ -374,42 +374,42 @@
                             <ul class="clients__list">
                                 <li class="clients__item">
                                     <a href="client1" class="client__link">
-                                        <svg class="clients-icon" width="41" >
+                                        <svg class="clients-icon" width="41" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="clients__item">
                                     <a href="client2" class="client__link">
-                                        <svg class="clients-icon" width="40">
+                                        <svg class="clients-icon" width="40" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="clients__item">
                                     <a href="client3" class="client__link">
-                                        <svg class="clients-icon" width="43.46">
+                                        <svg class="clients-icon" width="43.46" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company3"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="clients__item">
                                     <a href="client4" class="client__link">
-                                        <svg class="clients-icon" width="84.44">
+                                        <svg class="clients-icon" width="84.44" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company4"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="clients__item">
                                     <a href="client5" class="client__link">
-                                        <svg class="clients-icon" width="62.54">
+                                        <svg class="clients-icon" width="62.54" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company5"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="clients__item">
                                     <a href="client6" class="client__link">
-                                        <svg class="clients-icon" width="93.79">
+                                        <svg class="clients-icon" width="93.79" height="auto">
                                             <use href="./images/symbol-defs.svg#icon-company6"></use>
                                         </svg>
                                     </a>
