--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                         <img 
                                         srcset="./images/product-designer-mob-1x.jpg 1x, ./images/product-designer-mob-2x.jpg 2x"
                                         src="./images/product-designer.jpg" 
-                                        alt="UI Designer" lang="en" 
+                                        alt="product-designer" lang="en" 
                                         class="team__pct">
 
                                         <h3 class="team__subtitle">Игорь Демьяненко</h3>
@@ -241,7 +241,7 @@
                                         <img 
                                         srcset="./images/frontend-developer-mob-1x.jpg 1x, ./images/frontend-developer-mob-2x.jpg 2x"
                                         src="./images/frontend-developer.jpg" 
-                                        alt="UI Designer" lang="en" 
+                                        alt="frontend-developer" lang="en" 
                                         class="team__pct">
                                         <h3 class="team__subtitle">Ольга Репина</h3>
                                         <p class="team__contant" lang="en">Frontend Developer</p>
@@ -280,9 +280,9 @@
                                     </li>
                                     <li class="team__item">
                                         <img 
-                                        srcset="./images/Marketing-mob-1x.jpg 1x, ./images/Marketing-mob-2x.jpg 2x"
+                                        srcset="./images/marketing-mob-1x.jpg 1x, ./images/marketing-mob-2x.jpg 2x"
                                         src="./images/marketing.jpg" 
-                                        alt="UI Designer" lang="en" 
+                                        alt="Marketing" lang="en" 
                                         class="team__pct">
 
                                         <h3 class="team__subtitle">Николай Тарасов</h3>
