--- a/portfolio.html
+++ b/portfolio.html
@@ -112,11 +112,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/techno-mob-1x.jpg 1x, ./images/techno-mob-2x.jpg 2x"
-                                        src="./images/techno.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/techno-desk-1x.jpg 1x, ./images/techno-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/techno-tab-1x.jpg 1x, ./images/techno-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/techno-mob-1x.jpg 1x, ./images/techno-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/techno.jpg" 
+                                            alt="techno" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                             <p class="product-list__description">
                                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
@@ -134,11 +148,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/poster-mob-1x.jpg 1x, ./images/poster-mob-2x.jpg 2x"
-                                        src="./images/poster.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/poster-desk-1x.jpg 1x, ./images/poster-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/poster-tab-1x.jpg 1x, ./images/poster-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/poster-mob-1x.jpg 1x, ./images/poster-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/poster.jpg" 
+                                            alt="poster" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                                 <p class="product-list__description">
                                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -156,11 +184,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/restaurant-mob-1x.jpg 1x, ./images/restaurant-mob-2x.jpg 2x"
-                                        src="./images/restaurant.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/restaurant-desk-1x.jpg 1x, ./images/restaurant-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/restaurant-tab-1x.jpg 1x, ./images/restaurant-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/restaurant-mob-1x.jpg 1x, ./images/restaurant-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/restaurant.jpg" 
+                                            alt="restaurant" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                             <div class="product-list__overlay">
                                                 <p class="product-list__description">
                                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -178,11 +220,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/prime-mob-1x.jpg 1x, ./images/prime-mob-2x.jpg 2x"
-                                        src="./images/prime.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/prime-desk-1x.jpg 1x, ./images/prime-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/prime-tab-1x.jpg 1x, ./images/prime-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/prime-mob-1x.jpg 1x, ./images/prime-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/prime.jpg" 
+                                            alt="prime" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                             <div class="product-list__overlay">
                                                 <p class="product-list__description">
                                                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -200,11 +256,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/boxes-mob-1x.jpg 1x, ./images/boxes-mob-2x.jpg 2x"
-                                        src="./images/boxes.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/boxes-desk-1x.jpg 1x, ./images/boxes-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/boxes-tab-1x.jpg 1x, ./images/boxes-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/boxes-mob-1x.jpg 1x, ./images/boxes-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/boxes.jpg" 
+                                            alt="boxes" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                             <p class="product-list__description">
                                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -222,11 +292,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/inspiration-mob-1x.jpg 1x, ./images/inspiration-mob-2x.jpg 2x"
-                                        src="./images/inspiration.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/inspiration-desk-1x.jpg 1x, ./images/inspiration-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/inspiration-tab-1x.jpg 1x, ./images/inspiration-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/inspiration-mob-1x.jpg 1x, ./images/inspiration-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/inspiration.jpg" 
+                                            alt="inspiration" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                     <div class="product-list__overlay">
                                         <p class="product-list__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -244,11 +328,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/edition-mob-1x.jpg 1x, ./images/edition-mob-2x.jpg 2x"
-                                        src="./images/edition.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/edition-desk-1x.jpg 1x, ./images/edition-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/edition-tab-1x.jpg 1x, ./images/edition-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/edition-mob-1x.jpg 1x, ./images/edition-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/edition.jpg" 
+                                            alt="edition" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                             <p class="product-list__description">
                                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -266,11 +364,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/lab-mob-1x.jpg 1x, ./images/lab-mob-2x.jpg 2x"
-                                        src="./images/lab.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/lab-desk-1x.jpg 1x, ./images/lab-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/lab-tab-1x.jpg 1x, ./images/lab-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/lab-mob-1x.jpg 1x, ./images/lab-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/lab.jpg" 
+                                            alt="lab" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                             <p class="product-list__description">
                                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -288,11 +400,25 @@
                             <li class="product-list__item">
                                 <a href="" class="product-list__link">
                                     <div class="product-list__thumb">
-                                        <img 
-                                        srcset="./images/bisiness-mob-1x.jpg 1x, ./images/bisiness-mob-2x.jpg 2x"
-                                        src="./images/bisiness.jpg" 
-                                        alt="UI Designer" lang="en" 
-                                        class="product-list__pct">
+                                        <picture>
+                                            <source 
+                                            srcset="./images/bisiness-desk-1x.jpg 1x, ./images/bisiness-desk-2x.jpg 2x"
+                                            media="(min-width: 1200px)">
+
+                                            <source 
+                                            srcset="./images/bisiness-tab-1x.jpg 1x, ./images/bisiness-tab-2x.jpg 2x"
+                                            media="(min-width: 768px)">
+
+                                            <source 
+                                            srcset="./images/bisiness-mob-1x.jpg 1x, ./images/bisiness-mob-2x.jpg 2x"
+                                            media="(min-width: 320px)">
+
+                                            <img 
+                                            src="./images/bisiness.jpg" 
+                                            alt="bisiness" lang="en" 
+                                            class="product-list__pct">
+                                        </picture>
+
                                         <div class="product-list__overlay">
                                             <p class="product-list__description">
                                                 Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
