--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                     <li class="team__item">
                                         <picture>
                                             <source 
-                                            srcset="./images/ui-designer-1x.jpg 1x, ./images/ui-designer-desk-2x.jpg 2x"
+                                            srcset="./images/ui-designer-desk-1x.jpg 1x, ./images/ui-designer-desk-2x.jpg 2x"
                                             media="(min-width: 1200px)">
 
                                             <source 
