--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                             srcset="./images/img1.jpg 1x, ./images/img1-2x.jpg 2x"
                                             src="./images/product-designer.jpg" 
                                             alt="picture" lang="en" 
-                                            class="team__pct"
+                                            class="feature__pct"
                                             width="370">
                                       
                                             <p class="feature__text">Десктопные приложения</p>
@@ -182,7 +182,7 @@
                                             srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x"
                                             src="./images/img2.jpg" 
                                             alt="picture" lang="en" 
-                                            class="team__pct"
+                                            class="feature__pct"
                                             width="370">
 
                                             <p class="feature__text">Мобильные приложения</p>
@@ -194,7 +194,7 @@
                                             srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x"
                                             src="./images/img3.jpg" 
                                             alt="picture" lang="en" 
-                                            class="team__pct"
+                                            class="feature__pct"
                                             width="370">
                                             <p class="feature__text">Дизайнерские решения</p>
                                         </div>
