--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
                                         </div>
                                     </div>
                                             <div class="product-list__label">
-                                                <h2 class="product-list__title">Постер <span lang="en">Orlean vs Golden Star</span> </h2>
+                                                <h2 class="product-list__title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
                                                 <p class="product-list__text">Дизайн</p>
                                             </div>
                                 </a>
