--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="mob__menu-container"> 
                     <div class="mob__menu--tot">
                         <ul class="mob__menu--list list">
-                                <li class="mob-nav__item"> <a href="./index.html" class="mob-nav__link">Студия</a></li>      
+                                <li class="mob-nav__item"> <a href="./index.html" class="mob-nav__link curent">Студия</a></li>      
                                 <li class="mob-nav__item"> <a href="./portfolio.html" class="mob-nav__link">Портфолио</a></li>
                                 <li class="mob-nav__item"> <a href="" class="mob-nav__link">Контакты</a></li>
                         </ul>
