--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
                     <a href="./index.html" class="header__logo"> <span class="header__logo-item">Web</span>Studio</a>
 
                     <ul class="header__site-nav">
-                        <li class="site-nav__item"> <a href="./index.html" class="site-nav__link curent">Студия</a></li>
-                        <li class="site-nav__item"> <a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
+                        <li class="site-nav__item"> <a href="./index.html" class="site-nav__link">Студия</a></li>
+                        <li class="site-nav__item"> <a href="./portfolio.html" class="site-nav__link curent">Портфолио</a></li>
                         <li class="site-nav__item"> <a href="" class="site-nav__link">Контакты</a></li>
                     </ul>
             </nav> 
@@ -68,7 +68,7 @@
                 <div class="mob__menu--tot">
                     <ul class="mob__menu--list list">
                             <li class="mob-nav__item"> <a href="./index.html" class="mob-nav__link">Студия</a></li>      
-                            <li class="mob-nav__item"> <a href="./portfolio.html" class="mob-nav__link">Портфолио</a></li>
+                            <li class="mob-nav__item"> <a href="./portfolio.html" class="mob-nav__link curent">Портфолио</a></li>
                             <li class="mob-nav__item"> <a href="" class="mob-nav__link">Контакты</a></li>
                     </ul>
                 </div>
